test/interaction/Issue4268.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set₁" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 'no-paren)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?1 : Set _9 _9 : Agda.Primitive.Level [ at Issue4268.agda:5.8-21 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: _9 =< Agda.Primitive.lsuc Agda.Primitive.lzero (blocked on _9)" nil)
((last . 1) . (agda2-goals-action '(1)))
