test/interaction/Issue4268.agda
postulate
  A : Set₁

barb : Set₁
barb = {!(x y : A) → ?!}
